--- a/src/components/auth/sigincss.css
+++ b/src/components/auth/sigincss.css
@@ -24,26 +24,27 @@
   }
   .input1{
     position: absolute;
-    top: 40%;
-    width: 50%;
-    left: 25%;
+    top: 35%;
+    width: 40%;
+    left: 30%;
     height:5%;
     border-radius: 40px;
     border-color: #0051FF;
   }
   .input2{
     position: absolute;
-    top: 50%;
-    left: 25%;
-    width: 50%;
+    top: 45%;
+    left: 30%;
+    width: 40%;
     height:5%;
     border-radius: 40px;
     border-color: #0051FF;
   }
 .knopka{
     position: absolute;
-    top: 60%;
+    top: 55%;
     color: white;
+    left: 46%;
     font-size: 15px;
     width: 10%;
     height: 4%;
@@ -62,7 +63,7 @@
 .reg{
   position: absolute;
   color: #044AF0;
-  top: 55%;
+  top: 60%;
   left: 50%;
   text-decoration: none;
 }
@@ -80,31 +81,86 @@
   }
 .input0{
   position: absolute;
-  top: 30%;
-  left: 25%;
-  width: 50%;
+  top: 25%;
+  left: 30%;
+  width: 40%;
   height:5%;
   border-radius: 40px;
   border-color: #0051FF;
 }
 .regg{
   position: absolute;
-  top: 10%;
-  left: 40%;
+  top: 8%;
+  left: 39%;
   font-size: 60px;
   color: #0051FF;
   font-family: Proxima Nova;
 }
 .knopka1{
   position: absolute;
-  top: 60%;
+  top: 65%;
   color: white;
   font-size: 18px;
   width: 12%;
-  left: 45%;
+  left: 45.5%;
   height: 5%;
   background-color: red;
   border-radius: 40px;
   border: none;
   cursor: pointer;
+}
+.galka{
+  position: absolute;
+  top: 54%;
+  width: 5%;
+  left: 30%;
+  height: 2%;
+}
+.inactiveButton{
+  position: absolute;
+  top: 65%;
+  color: white;
+  font-size: 18px;
+  width: 12%;
+  left: 45.5%;
+  height: 5%;
+  background-color: rgb(102, 102, 102);
+  border-radius: 40px;
+  border: none;
+  cursor: not-allowed;
+
+}
+.zakon{
+  position: absolute;
+  font-size: 15px;
+  width:35%;
+  color: #0051FF;
+  top: 52%;
+  left: 34%;
+
+}
+.reg0{
+  position: absolute;
+  color: #044AF0;
+  top: 50%;
+  left: 47%;
+  text-decoration: none;
+}
+  .reg0 a:link {
+    color: #044AF0; 
+    text-decoration: none; 
+  }
+  
+  .reg0 a:visited {
+    color: #044AF0; 
+  }
+  
+  .reg0 a:hover {
+    color: red; 
+  }
+.logo{
+  position: absolute;
+  left: 0%;
+  top: -15%;
+
 }
