--- a/src/components/Bord/Homecss.css
+++ b/src/components/Bord/Homecss.css
@@ -217,6 +217,11 @@
     position: absolute;
     left: 0%;
 }
+.skyscraper-container{
+    position: absolute;
+    top: 40%;
+    left: 47.5%;
+}
 
 .street_label_container {
     display: grid;
@@ -441,13 +446,13 @@
 }
 
 .blue_upper_background_with_curve {
-    width: 1500px;
-    height: 73.895px;
+    width: 1501px;
+    height: 75px;
     border-radius: 32px;
     background: #0050F5;
     flex-shrink: 0;
     position: absolute;
-    top: 11.7%;
+    top: 11.3%;
     left: 50%;
     transform: translate(-50%);
 }
@@ -482,7 +487,7 @@
     /* clip-path: circle(213px at center); */
     clip-path: inset(0 0 0 0 round 35px);
     background: rgba(191, 191, 191, 0);
-    width: 425px;
+    width: 0;
     height: 61px;
     /* background-color: red; */
     position: absolute;
@@ -504,6 +509,14 @@
     white-space: normal;
     text-align: center;
     flex-shrink: 0;
+}
+.VS{
+    position: absolute;
+    font-size: 120px;
+    color: #FFF;
+    left: 46.3%;
+    top: -2%;
+    z-index: 999;
 }
 
 .w-300 {
@@ -728,70 +741,76 @@
 .street-container-1{
     position: absolute;
      top: 45%;
-     left: 14%;
+     left: 12%;
   }
 .street-container-2{
     position: absolute;
      top: 45%;
-     left: 24%;
+     left: 20%;
 }
 .street-container-3{
     position: absolute;
      top: 45%;
-     left: 34%;
+     left: 28%;
 }
 .street-container-4{
     position: absolute;
      top: 45%;
-     left: 44%;
+     left: 66%;
 }
 .street-container-5{
     position: absolute;
      top: 45%;
-     left: 54%;
+     left: 74%;
 }
 .street-container-6{
     position: absolute;
      top: 45%;
-     left: 64%;
+     left: 82%;
 }
 .ulmedia {
     position: absolute;
 }
-@media only screen and (max-width: 480px) {
+.logoo{
+ width: 0%;       
+}
+@media only screen and (max-width: 1500px) {
     body{
         background-color: black;
     }
     .blue_upper_background{
-        width: 100%;
+        width: 120%;
         height: 10%;
-        top: 0%;
+        top: 45%;
+        left: 70%;
     }
     .blue_upper_background_with_curve{
-        width: 100%;
+        width: 120.1%;
+        top: 39.5%;
+        left: 70%;
     }
     .main_background{
-        width: 90%;
-        left: 50%;
-        height: 50%;
-        top: 60%;
+        width: 120%;
+        left: 70%;
+        height: 60%;
+        top: 70%;
     }
     .circles{
-        width: 80%;
-        height: 80%;
+        width: 93%;
+        height: 96.6%;
 
     }
     .area{
-        width: 115%;
-        height: 215%;
+        width: 154%;
+        height: 156%;
     }
     .house_white {
-        width: 20px;
-        height: 20px;
+        width: 25px;
+        height: 25px;
     }
     .house_green{
-        width: 20px;
-        height: 20px;
+        width: 25px;
+        height: 25px;
 
     }
     .triangle{
@@ -799,32 +818,33 @@
     }
       .street-container-1{
         position: absolute;
-        left: 10%;
+        left: 15%;
+        top: 65%;
       }
       .street-container-2{
         position: absolute;
-         top: 45%;
-         left: 24%;
+        left: 30%;
+        top: 65%;
     }
     .street-container-3{
         position: absolute;
-         top: 45%;
-         left: 34%;
+         top: 65%;
+         left: 45%;
     }
     .street-container-4{
         position: absolute;
-         top: 45%;
-         left: 44%;
+        top: 65%;
+         left: 87%;
     }
     .street-container-5{
         position: absolute;
-         top: 45%;
-         left: 54%;
+        top: 65%;
+        left: 102%;
     }
     .street-container-6{
         position: absolute;
-         top: 45%;
-         left: 64%;
+         top: 65%;
+         left: 118%;
     }
     .triangle_green {
 
@@ -865,11 +885,82 @@
         width: 0%;
     }
     .score_background{
-        width: 30%;
-        height: 5%;  
+        width: 40%;
+        height: 8%;  
+        top: 52%;
+        left: 70%;
     }
     .score{
+        font-size: 60px;
+        top: 57%;
+        width: 50%;
+        left: 70%;
+    }
+    .table_row{
+        width: 80%;
+        column-gap: 280px;
+        height: 65%;
+    }
+    .item_for_widing{
         font-size: 30px;
-        top: 24.3%;
+        width: 30%;
+    }
+    .street-label{
+        font-size: 0px;
+
+    }
+    .skyscraper-container{
+        top: 62%;
+        left: 57%;
+
+    }
+    .big_house_white{
+        width: 40%;
+        height: 40px;
+
+    }
+    .big_house_green{
+        width: 40%;
+        height: 40px;
+    }
+    .big_triangle{
+        border-left: 20px solid transparent;
+        border-right: 20px solid transparent;
+        border-bottom: 30px solid rgb(255, 255, 255);
+        
+
+    }
+    .timer{
+        width: 0%;
+    }
+    .timer_background{
+        width: 0%;
+    }
+    #timer{
+        width: 0%;
+    }
+    .loading_1:before{
+        width: 0%;
+    }
+    .item{
+        width: 0%;
+    }
+    .logo_right{
+        left: 130%;
+    }
+    .logoo{
+        position: absolute;
+        top: 20%;
+        width: 200%;
+        height: 18%;
+        left: -68%;
+    }
+    .VS{
+        position: absolute;
+        font-size: 50px;
+        color: #FFF;
+        left: 64.5%;
+        top: 38%;
+        z-index: 999;
     }
 }
